--- a/src/com/ish/wimp/mxml/econ/PrivateTrade.mxml
+++ b/src/com/ish/wimp/mxml/econ/PrivateTrade.mxml
@@ -6,11 +6,11 @@
 		 xmlns:iwobanas="com.iwobanas.*">
 	
 	<iwobanas:CollapsiblePanel title="Private Trade and Foreign Aid" width="{Constants.EXPENSE_PANEL_WIDTH}" height="100%" expenseLineModel="{ExpenseModel.PrivateTradeTotal}" >
-		<econ:PrivateTradeLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+0*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.PrivateTrade1}" lineNumber="1" />
-		<econ:PrivateTradeLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+1*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.PrivateTrade2}" lineNumber="2" />
-		<econ:PrivateTradeLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+2*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.PrivateTrade3}" lineNumber="3" />
-		<econ:ForeignAidLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+3*Constants.PROD_LINE_HEIGHT}" lineNumber="1" />
-		<econ:ForeignAidLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+4*Constants.PROD_LINE_HEIGHT}" lineNumber="2" visible="{PlayerTurnModel.superpower}" includeInLayout="{PlayerTurnModel.superpower}" />
+		<econ:PrivateTradeLine id="privateTrade1" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+0*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.PrivateTrade1}" lineNumber="1" />
+		<econ:PrivateTradeLine id="privateTrade2" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+1*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.PrivateTrade2}" lineNumber="2" />
+		<econ:PrivateTradeLine id="privateTrade3" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+2*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.PrivateTrade3}" lineNumber="3" />
+		<econ:ForeignAidLine id="aid1" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+3*Constants.PROD_LINE_HEIGHT}" lineNumber="1" />
+		<econ:ForeignAidLine id="aid2" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+4*Constants.PROD_LINE_HEIGHT}" lineNumber="2" visible="{PlayerTurnModel.superpower}" includeInLayout="{PlayerTurnModel.superpower}" />
 		<s:Spacer y="{Constants.PROD_TOP_PAD+4*Constants.PROD_LINE_HEIGHT}" height="{Constants.PROD_BOT_PAD}" visible="{!PlayerTurnModel.superpower}" includeInLayout="{!PlayerTurnModel.superpower}" />
 		<s:Spacer y="{Constants.PROD_TOP_PAD+5*Constants.PROD_LINE_HEIGHT}" height="{Constants.PROD_BOT_PAD}" visible="{PlayerTurnModel.superpower}" includeInLayout="{PlayerTurnModel.superpower}" />
 	</iwobanas:CollapsiblePanel>
