--- a/src/com/ish/wimp/mxml/popup/LoadFilesPopup.mxml
+++ b/src/com/ish/wimp/mxml/popup/LoadFilesPopup.mxml
@@ -16,7 +16,7 @@
 				<s:layout>
 					<s:HorizontalLayout verticalAlign="baseline" />
 				</s:layout>
-				<s:Button label="Select world press file" click="new WorldPressParser().loadWorldPress();" />
+				<s:Button label="Load world press file" click="new WorldPressParser().loadWorldPress();" />
 				<s:Label text="{pressFileName}" />
 			</s:Group>
 			
@@ -24,13 +24,21 @@
 				<s:layout>
 					<s:HorizontalLayout verticalAlign="baseline" />
 				</s:layout>
-				<s:Button label="Select player turn file" click="new PlayerTurnParser().loadPlayerTurn();" />
+				<s:Button label="Load player turn file" click="new PlayerTurnParser().loadPlayerTurn();" />
 				<s:Label text="{playerFileName}" />
 			</s:Group>
 			
-			<s:Button label="Select ally turn file" click="new AllyTurnParser().loadPlayerTurn();" />
+			<s:Group>
+				<s:layout>
+					<s:HorizontalLayout verticalAlign="baseline" />
+				</s:layout>
+				<s:Button label="Load turn input file" click="new WimpParser().loadWimp();" />
+				<s:Label text="{turnFileName}" />
+			</s:Group>
+			
+			<s:Button label="Load ally turn file" click="new AllyTurnParser().loadPlayerTurn();" />
 			<s:List dataProvider="{allyFileNames}" />
-			<s:Button label="Load files" click="loadFiles();" />
+			<s:Button label="Update map" click="loadFiles();" />
 		</s:Group>
 	</s:Scroller>
 	
@@ -40,6 +48,7 @@
 			import com.ish.wimp.mxml.Map;
 			import com.ish.wimp.parsers.AllyTurnParser;
 			import com.ish.wimp.parsers.PlayerTurnParser;
+			import com.ish.wimp.parsers.WimpParser;
 			import com.ish.wimp.parsers.WorldPressParser;
 			import com.ish.wimp.view.Map;
 			
@@ -48,11 +57,13 @@
 			
 			[Bindable] public static var pressFileName : String;
 			[Bindable] public static var playerFileName : String;
+			[Bindable] public static var turnFileName : String;
 			[Bindable] public static var allyFileNames : ArrayList;
 			
 			private function init() : void {
 				pressFileName = "None specified";
 				playerFileName = "None specified";
+				turnFileName = "None specified";
 				allyFileNames = new ArrayList();
 				
 				AllyTurnModel.combatMap = null;
