--- a/src/com/ish/wimp/mxml/action/DropHexLine.mxml
+++ b/src/com/ish/wimp/mxml/action/DropHexLine.mxml
@@ -14,7 +14,7 @@
 		<![CDATA[
 			import com.ish.wimp.model.output.OutputModel;
 			
-			private function changeHandler() : void {
+			public function changeHandler() : void {
 				OutputModel.dropHex = hexInput.text;
 			}
 		]]>
