--- a/src/com/ish/wimp/mxml/econ/Production.mxml
+++ b/src/com/ish/wimp/mxml/econ/Production.mxml
@@ -6,11 +6,11 @@
 		 xmlns:iwobanas="com.iwobanas.*">
 	
 	<iwobanas:CollapsiblePanel title="Production" width="{Constants.EXPENSE_PANEL_WIDTH}" height="100%" expenseLineModel="{ExpenseModel.ProductionTotal}" >
-		<econ:ProductionLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+0*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production1}" lineNumber="1" />
-		<econ:ProductionLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+1*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production2}" lineNumber="2" />
-		<econ:ProductionLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+2*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production3}" lineNumber="3" />
-		<econ:ProductionLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+3*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production4}" lineNumber="4" />
-		<econ:ProductionLine x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+4*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production5}" lineNumber="5" />
+		<econ:ProductionLine id="prodLine1" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+0*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production1}" lineNumber="1" />
+		<econ:ProductionLine id="prodLine2" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+1*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production2}" lineNumber="2" />
+		<econ:ProductionLine id="prodLine3" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+2*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production3}" lineNumber="3" />
+		<econ:ProductionLine id="prodLine4" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+3*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production4}" lineNumber="4" />
+		<econ:ProductionLine id="prodLine5" x="{Constants.PROD_LEFT_PAD}" y="{Constants.PROD_TOP_PAD+4*Constants.PROD_LINE_HEIGHT}" ExpenseLine="{ExpenseModel.Production5}" lineNumber="5" />
 		<s:Spacer y="{Constants.PROD_TOP_PAD+5*Constants.PROD_LINE_HEIGHT}" height="{Constants.PROD_BOT_PAD}" />
 	</iwobanas:CollapsiblePanel>
 	
